# Olikbochon

./: .dockerignore  Dockerfile  README.md  app.py  app.py.bak  main.py  nlp_pipeline.py  packages.txt  pyproject.toml  requirements.txt  sign_detector.py  style.py  tts_utils.py  video_processor.py
core/: nlp_pipeline.py  sign_detector.py  style.py  tts_utils.py  video_processor.py
process/: inference_classifier.py
