[project]
name = "olikbochon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "av>=10.0.0",
    "deep-translator>=1.11.4",
    "gtts>=2.5.1",
    "mediapipe>=0.10.9",
    "numpy>=1.24.0",
    "opencv-python-headless>=4.8.0",
    "pyspellchecker>=0.8.1",
    "scikit-learn>=1.3.0",
    "streamlit>=1.32.0",
    "streamlit-webrtc>=0.47.1",
]
